--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,14 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     
     <item
-        android:id="@+id/nav_habits"
-        android:icon="@drawable/ic_habits"
-        android:title="Habits" />
+        android:id="@+id/nav_home"
+        android:icon="@drawable/ic_home"
+        android:title="Home" />
     
     <item
         android:id="@+id/nav_mood"
-        android:icon="@drawable/ic_mood"
+        android:icon="@drawable/baseline_tag_faces_24"
         android:title="Mood" />
+    
+    <item
+        android:id="@+id/nav_hydration"
+        android:icon="@drawable/ic_water_drop"
+        android:title="Hydration" />
     
     <item
         android:id="@+id/nav_settings"
