--- a/app/src/main/res/layout/fragment_habits.xml
+++ b/app/src/main/res/layout/fragment_habits.xml
@@ -27,6 +27,16 @@
             android:textColor="@color/text_primary" />
 
         <TextView
+            android:id="@+id/date_type_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Today - Dec 15, 2023"
+            android:textSize="14sp"
+            android:textColor="@color/primary_green"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/progress_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
