--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="card_background">#FFFFFF</color>
     <color name="text_primary">#333333</color>
     <color name="text_secondary">#666666</color>
+    <color name="primary_blue">#4A90E2</color>
     <color name="accent_blue">#4A90E2</color>
     <color name="accent_orange">#FF8C42</color>
     <color name="accent_purple">#9B59B6</color>
@@ -26,5 +27,17 @@
     <color name="mood_neutral">#FFD93D</color>
     <color name="mood_happy">#6BCF7F</color>
     <color name="mood_very_happy">#4ECDC4</color>
+    
+    <!-- Creative UI Colors -->
+    <color name="gradient_start">#5F8E5C</color>
+    <color name="gradient_end">#4A7C59</color>
+    <color name="card_shadow">#1A000000</color>
+    <color name="success_green">#4CAF50</color>
+    <color name="warning_orange">#FF9800</color>
+    <color name="info_blue">#2196F3</color>
+    <color name="purple_accent">#9C27B0</color>
+    <color name="pink_accent">#E91E63</color>
+    <color name="teal_accent">#009688</color>
+    <color name="amber_accent">#FFC107</color>
     
 </resources>
