--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="card_shadow">#1A000000</color>
     <color name="success_green">#4CAF50</color>
     <color name="warning_orange">#FF9800</color>
+    <color name="error_red">#F44336</color>
     <color name="info_blue">#2196F3</color>
     <color name="purple_accent">#9C27B0</color>
     <color name="pink_accent">#E91E63</color>
