--- a/app/src/main/res/drawable/ic_language.xml
+++ b/app/src/main/res/drawable/ic_language.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@color/black"
-        android:pathData="M12.87,15.07L10.33,12.56L10.36,12.53C12.1,10.59 13.34,8.36 14.07,6H17V4H10V2H8V4H1V6H12.17C11.5,7.92 10.44,9.75 9,11.35C8.07,10.32 7.3,9.19 6.69,8H4.69C5.42,9.63 6.42,11.17 7.67,12.56L2.58,17.58L4,19L9,14L12.11,17.11L12.87,15.07M18.5,10H16.5L12,22H14L15.12,19H19.87L21,22H23L18.5,10M15.88,17L17.5,12.67L19.12,17H15.88Z" />
+    android:viewportHeight="24"
+    android:tint="?attr/colorOnSurface">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M11.99,2C6.47,2 2,6.48 2,12s4.47,10 9.99,10C17.52,22 22,17.52 22,12S17.52,2 11.99,2zM18.92,8h-2.95c-0.32,-1.25 -0.78,-2.45 -1.38,-3.56 1.84,0.63 3.37,1.91 4.33,3.56zM12,4.04c0.83,1.2 1.48,2.53 1.91,3.96h-3.82c0.43,-1.43 1.08,-2.76 1.91,-3.96zM4.26,14.98C4.62,15.64 5.23,16.17 5.97,16.49c-0.12,-0.65 -0.19,-1.32 -0.19,-1.99s0.07,-1.34 0.19,-1.99c-0.74,0.32 -1.35,0.85 -1.71,1.51C4.07,13.64 4.07,14.36 4.26,14.98zM5.97,7.51c0.74,0.32 1.35,0.85 1.71,1.51C7.93,9.64 7.93,10.36 7.74,11.02c-0.36,0.66 -0.97,1.19 -1.71,1.51 -0.12,-0.65 -0.19,-1.32 -0.19,-1.99s0.07,-1.34 0.19,-1.99zM12,19.96c-0.83,-1.2 -1.48,-2.53 -1.91,-3.96h3.82c-0.43,1.43 -1.08,2.76 -1.91,3.96zM14.34,14H9.66c-0.09,-0.66 -0.16,-1.32 -0.16,-2s0.07,-1.35 0.16,-2h4.68c0.09,0.65 0.16,1.32 0.16,2S14.43,13.34 14.34,14zM15.62,4.44c0.6,1.11 1.06,2.31 1.38,3.56h2.95c-0.96,-1.65 -2.49,-2.93 -4.33,-3.56zM19.74,9.02c0.36,0.66 0.97,1.19 1.71,1.51 -0.12,0.65 -0.19,1.32 -0.19,1.99s0.07,1.34 0.19,1.99c-0.74,-0.32 -1.35,-0.85 -1.71,-1.51 -0.19,-0.66 -0.19,-1.38 0,-2.04zM15.62,19.56c-0.6,-1.11 -1.06,-2.31 -1.38,-3.56h2.95c0.96,1.65 2.49,2.93 4.33,3.56 -1.84,-0.63 -3.37,-1.91 -4.33,-3.56z"/>
 </vector>
