--- a/app/src/main/res/drawable/edit_icon_background.xml
+++ b/app/src/main/res/drawable/edit_icon_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="oval">
     <solid android:color="@color/primary_green" />
-    <corners android:radius="8dp" />
+    <stroke android:width="2dp" android:color="@color/white" />
 </shape>
