--- a/app/src/main/res/layout/activity_onboarding2.xml
+++ b/app/src/main/res/layout/activity_onboarding2.xml
@@ -50,6 +50,7 @@
         android:id="@+id/subtitle"
         android:layout_width="347dp"
         android:layout_height="65dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="sans-serif-condensed"
         android:text="Recode your thoughts and feelings."
         android:textAlignment="center"
