--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <!-- App Theme Colors -->
     <color name="primary_green">#5F8E5C</color>
     <color name="light_green">#8FBC8F</color>
+    <color name="primary_green_dark">#4A7C59</color>
     <color name="dark_green">#224A35</color>
     <color name="background_color">#F5F5F5</color>
     <color name="card_background">#FFFFFF</color>
@@ -40,5 +41,6 @@
     <color name="pink_accent">#E91E63</color>
     <color name="teal_accent">#009688</color>
     <color name="amber_accent">#FFC107</color>
+    <color name="red">#F44336</color>
     
 </resources>
